# Runeform_POC_1

./: .gitignore  README.md  pyproject.toml  server.py
runeform/: archetypes.py  compose.py  history.py  intake.py  models.py  photos.py  pipeline.py  ranking.py  render.py  scoring.py
